--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,8 @@ header {
 	margin-top: 20px;
 }
 .header-button {
+	display: inline-block;
+	text-decoration: none;
 	box-shadow: 10px 17px 34px 6px rgba(51, 29, 85, 0.83);
 	border-radius: 25px;
 	background-color: #ffffff;
@@ -37,10 +39,10 @@ header {
 	margin-top: 33px;
 	border: none;
 }
-.header-button:hover {
+/*.header-button:hover {
     color: #fff;
     background-color: #7F68A2;
-}
+}*/
 header small {
 	font-size: 12px;
 	display: block;
@@ -137,15 +139,16 @@ footer {
 	font-size: 18px;
 	border-radius: 50px;
 	padding: 12px 40px;
+	text-decoration: none;
 }
-.footer-button:hover {
+/*.footer-button:hover {
     color: #563D7C;
     background-color: #331D55;   
-}
-.footer-button-link {
+}*/
+/*.footer-button-link {
 	color: #fff;
 	text-decoration: none;	
-}
+}*/
 
 @media (max-width: 1200px) {
 	.header-pretitle {
